<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icon_app"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/welcome_title"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_app" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/btn_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icon_1"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_feature_one_summary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_feature_one_title"
                app:srcCompat="@drawable/ic_data_usage_24"
                app:tint="?attr/colorSecondary"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_feature_one_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/welcome_feature_one_title"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/icon_1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_feature_one_summary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/welcome_feature_one_summary"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                app:layout_constraintEnd_toEndOf="@+id/tv_feature_one_title"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@+id/tv_feature_one_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_feature_one_title" />


















            <ImageView
                android:id="@+id/icon_2"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_feature_two_summary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_feature_two_title"
                app:srcCompat="@drawable/ic_audio_24"
                app:tint="?attr/colorSecondary"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_feature_two_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/welcome_feature_two_title"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/icon_1"
                app:layout_constraintTop_toBottomOf="@+id/tv_feature_one_summary" />

            <TextView
                android:id="@+id/tv_feature_two_summary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/welcome_feature_two_summary"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                app:layout_constraintEnd_toEndOf="@+id/tv_feature_two_title"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@+id/tv_feature_two_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_feature_two_title" />












            <ImageView
                android:id="@+id/icon_3"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_feature_three_summary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_feature_three_title"
                app:srcCompat="@drawable/ic_data_exploration_24"
                app:tint="?attr/colorSecondary"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_feature_three_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/welcome_feature_three_title"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/icon_2"
                app:layout_constraintTop_toBottomOf="@+id/tv_feature_two_summary" />

            <TextView
                android:id="@+id/tv_feature_three_summary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/welcome_feature_three_summary"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                app:layout_constraintEnd_toEndOf="@+id/tv_feature_three_title"
                app:layout_constraintStart_toStartOf="@+id/tv_feature_three_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_feature_three_title" />









            <ImageView
                android:id="@+id/icon_4"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_feature_third_summary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_feature_third_title"
                app:srcCompat="@drawable/ic_general_24"
                app:tint="?attr/colorSecondary"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_feature_third_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/welcome_feature_third_title"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/icon_3"
                app:layout_constraintTop_toBottomOf="@+id/tv_feature_three_summary" />

            <!--<TextView
                android:id="@+id/tv_quote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:alpha="?android:attr/disabledAlpha"
                android:gravity="center"
                android:text="@string/welcome_quote"
                android:textColor="@color/md_theme_primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_feature_third_summary"
                tools:ignore="TextContrastCheck" />-->

            <TextView
                android:id="@+id/tv_feature_third_summary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/welcome_feature_third_summary"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                app:layout_constraintEnd_toEndOf="@+id/tv_feature_third_title"
                app:layout_constraintStart_toStartOf="@+id/tv_feature_third_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_feature_third_title" />

            <ImageView
                android:id="@+id/icon_secure"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="65dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_feature_third_title"
                app:srcCompat="@drawable/ic_security_24"
                app:tint="?attr/colorSecondary"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_advisory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/welcome_advisory"
                android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon_secure" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:maxWidth="140dp"
        android:text="@string/welcome_btn_continue"
        android:textColor="@color/white"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="480dp" />
</androidx.constraintlayout.widget.ConstraintLayout>